2010-09-29  Simon Fraser  <simon.fraser@apple.com>

        Add a warning when a test requires special steps.
        Add a Print Preview button for 'paged' tests that
        brings up the print dialog, allowing the user to 
        judge paged media tests.

        * CSSTestSuiteHarness/harness/harness.css:
        * CSSTestSuiteHarness/harness/harness.html:
        * CSSTestSuiteHarness/harness/harness.js:
        (TestSuite.prototype.loadTest):
        (TestSuite.prototype.processFlags):

2010-09-29  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Remove revisions_casuing_failures
        https://bugs.webkit.org/show_bug.cgi?id=46872

        This function exists only to be unit tested.

        * Scripts/webkitpy/common/net/failuremap.py:
        * Scripts/webkitpy/common/net/failuremap_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:

2010-09-29  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        SheriffBot should post the list of failing tests to bugs
        https://bugs.webkit.org/show_bug.cgi?id=46871

        * Scripts/webkitpy/common/net/buildbot.py:
        * Scripts/webkitpy/common/net/failuremap.py:
        * Scripts/webkitpy/common/net/regressionwindow.py:
        * Scripts/webkitpy/tool/bot/sheriff.py:
        * Scripts/webkitpy/tool/bot/sheriff_unittest.py:
        * Scripts/webkitpy/tool/commands/earlywarningsystem_unittest.py:
        * Scripts/webkitpy/tool/commands/queues_unittest.py:
        * Scripts/webkitpy/tool/commands/sheriffbot.py:
        * Scripts/webkitpy/tool/commands/sheriffbot_unittest.py:
        * Scripts/webkitpy/tool/commands/upload_unittest.py:
        * Scripts/webkitpy/tool/mocktool.py:

2010-09-29  Brent Fulgham  <bfulgham@webkit.org>

        Reviewed by Martin Robinson, Eric Seidel, and Mark Rowe.

        [WinCairo] Adds a build slave.
        https://bugs.webkit.org/show_bug.cgi?id=46360

        * BuildSlaveSupport/build.webkit.org-config/config.json: Add